get_payout_stats openapi
