# openApi/server/openapi_server/models/__init__.py
@@ -23,6 +23,8 @@ from openapi_server.models.get_discussion_request import GetDiscussionRequest
 from openapi_server.models.get_discussion_request_params import GetDiscussionRequestParams
 from openapi_server.models.get_follow_list_request import GetFollowListRequest
 from openapi_server.models.get_follow_list_request_params import GetFollowListRequestParams
+from openapi_server.models.get_payout_stats_request import GetPayoutStatsRequest
+from openapi_server.models.get_payout_stats_request_params import GetPayoutStatsRequestParams
 from openapi_server.models.get_profile_request import GetProfileRequest
 from openapi_server.models.get_profile_request_params import GetProfileRequestParams
 from openapi_server.models.list_all_subscriptions_request import ListAllSubscriptionsRequest
